src/App.css
.page-title.arc-bottom::after {
  content: '';
  position: absolute;
  bottom: -80px; /* Position it at the bottom of the parent */
  left: 50%;
  top: 0;
  transform: translateX(-50%) rotate(180deg); /* Center horizontally and rotate 180 degrees */
  width: 100%;
  height: 100%;
  background-image: url('/images/bg.png');
  z-index: -1; /* Ensure it’s behind other content */
  clip-path: ellipse(80% 100% at 50% 100%);
}

.page-title.arc-bottom::before {
  content: '';
  position: absolute;
  bottom: -80px; /* Position it at the bottom of the parent */
  top: 0;
  left: 50%;
  transform: translateX(-50%) rotate(180deg); /* Center horizontally and rotate 180 degrees */
  width: 100%;  
  height: 100%;
  background-color: rgba(20, 72, 53, .85); /* Semi-transparent overlay */
  z-index: 1; /* Ensure it’s on top of the red background but behind other content */
  clip-path: ellipse(80% 100% at 50% 100%);
}

.gradient-hover:hover {
  background: linear-gradient(111.4deg, rgb(67, 222, 67) 18.4%, rgb(0, 232, 237) 100.2%);
  background: linear-gradient(111.4deg, #2a966f 18.4%,#0b221a 100.2%);
  color: white;
}

.hero::before {
  content: '';
  position: absolute;
  bottom:-80px; /* Position it at the bottom of the parent */
  left: 0px;
  transform: rotate(180deg); /* Center horizontally and rotate 180 degrees */
  width: 100%;  
  height: 20%;
  background-color: rgba(20, 72, 53, 1); /* Semi-transparent overlay */
  z-index: -1; /* Ensure it’s on top of the red background but behind other content */
  clip-path: ellipse(60% 100% at 50% 100%);
}

.service-arc::after {
  content: '';
  position: absolute;
  bottom: -50px; /* Position it at the bottom of the parent */
  left: 50%;
  transform: translateX(-50%); /* Center horizontally */
  width: 200%;
  background-color: #e8f9f1;
  height: 70%;
  border-radius: 50%;
  z-index: -1; /* Ensure it’s behind other content */
}

/* Hide scrollbar for Chrome, Safari and Opera */
.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.hide-scrollbar {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.va-ninja.arc-bottom::after {
  content: '';
  position: absolute;
  bottom: -80px; /* Position it at the bottom of the parent */
  left: 50%;
  top: 0;
  transform: translateX(-50%); /* Center horizontally */
  width: 200%;
  height: 100%;
  background-image: url('/images/ninja2.jpg');
  background-position: 10% 10%; /* Custom position */
  background-size: cover;
  background-repeat: no-repeat;
  z-index: -1; /* Ensure it’s behind other content */
  clip-path: ellipse(40% 100% at 50% 0%); /* Curve at the bottom */
}


.va-ninja.arc-bottom::before {
  content: '';
  position: absolute;
  bottom: -80px; /* Position it at the bottom of the parent */
  top: 0;
  left: 50%;
  transform: translateX(-50%) rotate(180deg); /* Center horizontally and rotate 180 degrees */
  width: 200%;
  height: 100%;
  background-color: rgba(20, 72, 53, .4); /* Semi-transparent overlay */
  z-index: 1; /* Ensure it’s on top of the red background but behind other content */
  clip-path: ellipse(40% 100% at 50% 100%);
}

@media screen and (max-width: 768px) {
  .va-ninja.arc-bottom::after {
    clip-path: ellipse(100% 100% at 100% 0%); /* Curve at the bottom */
  }
  .va-ninja.arc-bottom::before {
    clip-path: ellipse(100% 100% at 100% 80%);
  }
}



.circle-big::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #f84f3962;
  border-radius: inherit; /* Ensures the overlay has the same border radius as the parent */
  z-index: 0; /* Ensure the overlay is behind the content but above the background image */
}

